--- a/index.html
+++ b/index.html
@@ -473,23 +473,74 @@
                             <img src="assets/img/galeri-1.jpg" alt="">
                             <div class="tanggal">
                                 <span class="tgl">14</span>
-                                <span class="tgl-2">Okt, 2019</span>
+                                <span class="tgl-2">Oktober, 2019</span>
                             </div>
                         </div>
+                        <div class="section-content">
+                            <a href="">
+                                <h3>Siswa Teladan SMAIT THARIQ BIN ZIYAD Berkurban 
+                                    untuk Memupuk Kepedulian Sosial</h3></a>
+                            <p>Bertepatan dengan hari Tasrikh ke-3, para Siswa
+                            SMAIT THARIQ BIN ZIYAD mengadakan peringatan 
+                            Idul Adha 1440H dengan<a href="">[...]</a></p>
+                        </div>
+                        <div class="section-meta">
+                            <a href="">Kegiatan</a>
+                            <a href=""><i class="fas fa-user"></i>
+                            Administrator</a>
+                        </div>
                     </div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="section-thumbnail">
+                            <img src="assets/img/galeri-1.jpg" alt="">
+                            <div class="tanggal">
+                                <span class="tgl">14</span>
+                                <span class="tgl-2">Oktober, 2019</span>
+                            </div>
+                        </div>
+                        <div class="section-content">
+                            <a href="">
+                                <h3>Siswa Teladan SMAIT THARIQ BIN ZIYAD Berkurban 
+                                    untuk Memupuk Kepedulian Sosial</h3></a>
+                            <p>Bertepatan dengan hari Tasrikh ke-3, para Siswa
+                            SMAIT THARIQ BIN ZIYAD mengadakan peringatan 
+                            Idul Adha 1440H dengan<a href="">[...]</a></p>
+                        </div>
+                        <div class="section-meta">
+                            <a href="">Kegiatan</a>
+                            <a href=""><i class="fas fa-user"></i>
+                            Administrator</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="section-thumbnail">
+                            <img src="assets/img/galeri-1.jpg" alt="">
+                            <div class="tanggal">
+                                <span class="tgl">14</span>
+                                <span class="tgl-2">Oktober, 2019</span>
+                            </div>
+                        </div>
+                        <div class="section-content">
+                            <a href="">
+                                <h3>Siswa Teladan SMAIT THARIQ BIN ZIYAD Berkurban 
+                                    untuk Memupuk Kepedulian Sosial</h3></a>
+                            <p>Bertepatan dengan hari Tasrikh ke-3, para Siswa
+                            SMAIT THARIQ BIN ZIYAD mengadakan peringatan 
+                            Idul Adha 1440H dengan<a href="">[...]</a></p>
+                        </div>
+                        <div class="section-meta">
+                            <a href="">Kegiatan</a>
+                            <a href=""><i class="fas fa-user"></i>
+                            Administrator</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="tombol-selengkapnya">
                 <a href="" class="btn btn-more">Lihat Berita Lainnya</a>
             </div>
         </div>
+        
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
